stylesheets/styles.css
* :not(.logo-decoration) {
	font-family: 'Nunito', sans-serif;
	box-sizing: border-box;
	color: #4E4E4E;
}

body {
	margin: 0;
	padding: 0;
	background-color: #F3F3F3;
}

main {
	margin: 0 10%;
	margin-bottom: 50px;
}

h2 {
	margin: 15px 0 0;
	font-size: 1.6rem;
}

p {
	margin: 5px 0 0;
	font-size: 1.25rem;
}

.article-image-container {
	padding: 0 10%;
}

.image {
	border-radius: 4px;
}

.link-decoration {
	color: #3D4DFA;
	cursor: pointer;
	text-decoration: none;
}

.link-decoration:hover {
	text-decoration: underline;
}

.logo-colour {
	letter-spacing: 0px;
}

.logo-decoration {
	text-decoration: none;
	font-size: 1.3rem;
}

.decoration {
	text-decoration: none;
	color: #FF2870;
}

.no-decoration {
	text-decoration: none;
	color: black;
}

.heading-underline{
    position: relative;}
.heading-underline:before {
	content: "";
	position: absolute;
	width: 100%;
	height: 1px;
	bottom: -2px;
	background-color: #4E4E4E;
	visibility: hidden;
	transform: scaleX(0);
	transition: all 0.4s ease;
	border-radius: 4px;}
.heading-underline:hover:before {
	visibility: visible;
	transform: scaleX(1);}

nav {
	height: 10%;
	width: 100%;
	display: flex;
	justify-content: center;
}

.nav-fluid {
	width: 100%;
	display: flex;
	justify-content: space-between;
	align-items: center;
	height: 10%;
	padding: 0 20px 0 20px;
	max-width: 3000px;

}

.logo {
	font-size: 20px;
	letter-spacing: 0.8px;
}

.nav-links {
	display: flex;
	width: 500px;
	justify-content: space-between;
	align-items: center;
	list-style: none;
	transition: all 0.4s ease;
}

.nav-links li {
	letter-spacing: 0.5px;
	font-size: 1.25rem;
	opacity: 1;
}

.burger {
	display: none;
	cursor: pointer;
}

.burger div {
	height: 2px;
	width: 30px;
	border-radius: 100px;
	background-color: #4E4E4E;
	margin: 7px;
	transition: all 0.4s ease;
}

footer {
	display: flex;
	justify-content:  center;
	padding: 30px 20px;
}

.footer-text {
	font-size: 1.3rem;
}

.footer-contents {
	max-width: 3000px;
	width: 100%;
	display: flex;
	justify-content: space-between;
	align-items: flex-end;
}

.social-item {
	padding: 6px;
	border-radius: 5px;
}

.social-item:hover {
	background-color: #D9D9D9;
}

.socials {
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	grid-gap: 6px;
	max-width: 150px;
}

ul {

}

li {
	margin: 5px 0 0;
	font-size: 1.2rem;
}

footer {
	display: flex;
	justify-content:  center;
	padding: 30px 20px;
}

.footer-text {
	font-size: 1.3rem;
}

.footer-contents {
	max-width: 3000px;
	width: 100%;
	display: flex;
	justify-content: space-between;
	align-items: flex-end;
}

.social-item {
	padding: 6px;
	border-radius: 5px;
}

.social-item:hover {
	background-color: #D9D9D9;
}

.socials {
	display: grid;
	grid-template-columns: 1fr;
	grid-gap: 6px;
	/*max-width: 150px;*/
}

@media screen and (max-width: 1150px) {
	main {
		margin: 0 20px 50px;
	}
}

@media screen and (max-width: 900px) {
	body {
		overflow-x: hidden;
	}
	.nav-links {
		position: absolute;
		top: -0px;
		right: 0px;
		margin: 0;
		background-color: #F3F3F3;
		justify-content: space-around;
		padding: 20% 0 20% 0;
		font-size: 1.2rem;
		display: none;
	}
	.nav-links li {
		font-size: 2rem;
		opacity: 0;
	}
	.burger {
		display: inline-block;
	}
	.article-image-container {
		padding: 0px;
	}
}

.nav-active {
	display: block;
	display: flex;
	width: 100%;
	height: 100%;
	padding: 200px 0;
	flex-direction: column;
	align-items: center;
}

.vertical-scroll {
	overflow-y: hidden;
	overflow-x: hidden;
}

.toggle .line1 {
	transform: rotate(-45deg) translate(-3px, 15px);
	margin: 0;
}
.toggle .line2 {
	opacity: 0;
}
.toggle .line3 {
	transform: rotate(45deg) translate(-3px,-4px);
}

@keyframes navLinkFade {
	from {
		opacity: 0;
		transform: translateY(50px);

	}
	to {
		opacity: 1;
		transform: translate(0px);
	}
}

